--- a/download.html
+++ b/download.html
@@ -18,7 +18,7 @@
 	<meta charset="UTF-8" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="Обновление IMPACT"/>
-	<meta name="title" content="IMPACT 1.0rc2" />
+	<meta name="title" content="IMPACT 1.0.0.1" />
     <!-- Site Title -->
     <title>Impact - Скачать</title>
 
@@ -64,148 +64,13 @@
 		</div>
 	</header>
 	<!-- End Header Area -->
-	<!-- Start Changlog -->
-	<section class="popup-fade">
-		<div class="popup tabs_info scrollbox">
-			<a class="popup-close" href="#">Close</a>
-			<h2 style="font-weight:bold; font-size: 35px; color: #000; text-align: center;" >Список изменений</h2>		
-			<div class="selectTabs">
-				<div class="tab_content" style="color: #000;">
-					<p class="p-size">IMPACT 1.0 Release Candidate 2</p>
-					<p class="p-black">MODS:</p><hr>
-					<ul>Applied Energistics				
-						<li>Исправлено отображение механизмов в Waila</li>
-						<li>Исправлен баг с Интерфейсом (выдавал отрицательные значения, что вело к крашу)</li>
-						<li>Добавлена возможность переименовывать механизмы с помощью устройства Laptop из Gregtech</li>
-					</ul>
-					<ul>Carpenters Block
-						<li>Множественные фиксы серверной части</li>
-					</ul>
-					<ul>Chisel
-						<li>Исправлены дюпы с контейнерами</li>
-					</ul>
-					<ul>EnderIO
-						<li>Добавлены большие фильтры для кондуитов</li>
-						<li>Портированы кондуиты с версии 1.12 (Переработана логика работы, обновлены текстуры)</li>
-					</ul>
-					<ul>ExtraCells
-						<li>Портирована ордикт шина с версии 1.12 (Теперь работают условия | и & без ошибок)</li>
-						<li>Исправлена загрузка НБТ шины хранения</li>
-						<li>Обвновлены кнопки в гуи жидкостного терминала</li>
-						<li>Исправлен дюп с кварцевым танком</li>
-						<li>Исправлен дюп с переполнением компонентов в хранилище</li>
-						<li>Исправлен дюп с экспорт шиной</li>
-						<li>Исправлены визуальные баги</li>
-					</ul>
-					<ul>Forestry
-						<li>Удален рецепт удобрения</li>
-					</ul>
-					<ul>GregTech
-						<li>Добавлено оверклок для чистой комнаты</li>
-						<li>Добавлена интеграция с хэтчами из TecTech</li>
-						<li>Удалена проверка воздуха у контролеров больших турбин</li>
-						<li>Добавлена кнопка для включения автовыхода у одноблочных танков (функция с отверткой удалена)</li>
-						<li>Добавлен режим блокировки жидкости для одноблочных танков</li>
-						<li>Исправлен лаг при просмотре тултипа Программируемой микросхемы</li>
-						<li>Добавлена функция для молота - сбивание кальция с паровых солнечных панелей</li>
-						<li>Добавлено новое топливо под Naquadah Generator</li>
-						<li>Еще одна попытка исправить текстуры генератора воздуха</li>
-						<li>Исправлены рецепты в dust washer</li>
-						<li>Исправлена формула у грисиума</li>
-						<li>Добавлен новый инструмент - Laptop</li>
-						<li>Добавлена функция смены местами жидокстей в одноблочных механизмах</li>
-						<li>Добавлены гуи для всех каверов</li>
-						<li>Добавлены новые типы предметных труб</li>
-						<li>Исправлены размеры больших труб (теперь не занимают весь блок)</li>
-						<li>Добавлен Heavy Oil в рецепт Flotation Unite</li>
-						<li>Изменено энергопотребление Flotation Unite</li>
-						<li>Фикс руды Perlite</li>
-						<li>Изменен рецепт Fluid Filter</li>
-						<li>Изменена высота генерации жилы кварца</li>
-						<li>В рецепт краски добавлена микросхема</li>
-						<li>Удалены рецепты у одноблочных Naquadah Generator</li>
-						<li>Удален рецепт контроллера у Processing Array</li>
-						<li>Изменен рецепт Eye of Ender</li>
-						<li>Изменено получение информации с механизмов сканером</li>
-					</ul>
-					<ul>Impact Core
-						<li>Добавлены новые наквадах генераторы</li>
-						<li>Добавлен новый гипер генератор</li>
-						<li>Добавлен Heavy metal cyclone</li>
-						<li>Исправлена голограмма электролизера</li>
-						<li>Удалены все злые мобы, а также кошки и летучие мыши</li>
-						<li>Добавлены декоративные блоки</li>
-						<li>Отключена пассивная разрядка с мультиблочной батарейки</li>
-						<li>Полностью перенесены машины из KekzTech и добавлены голограммы</li>
-						<li>Добавлена голограмма для фермы дерева</li>
-						<li>Добавлены рецепты под Ztones, ChickenChunks, WirelessCraftingTerminal</li>
-						<li>Добавлены альтернативные рецепты для Pattern из АЕ</li>
-						<li>Рецепт корпусов для машин увеличен в 2 раза</li>
-						<li>Изменено время производство сплавов</li>
-						<li>В рецепт ULV Conveyor добавлена резина</li>
-						<li>Кинетический генератор из IC2 стал дешевле</li>
-						<li>Добавлены альтернативные рецепты для солнечных панелей</li>
-						<li>Добавлен рецепт переработки солнечных панелей из Impact Core</li>
-						<li>Изменено множество рецептов в OpenComputers</li>
-						<li>В рецепт MultiAssembler добавлен IV Emitter</li>
-						<li>В рецепты с применением деревянных дверей добавлены варианты из Malisis Doors</li>
-						<li>Добавлены рецепты для мода Practical Logistics</li>
-						<li>В рецепты контроллеров мультиблоков добавлен Large Display из мода Practical Logistics</li>
-						<li>Добавлен рецепт для Laptop</li>
-						<li>Фикс рецепта Genetic Circuit</li>
-						<li>Добавлен новый рецепт для ArcLamp</li>
-						<li>Фикс рецепта Advanced Lappack</li>
-						<li>Фикс рецептов Portable Tank</li>
-						<li>Изменены рецепты UV+ микросхем</li>
-						<li>Изменены рецепты у ICChip и Screwdriver из мода ProjectRed</li>
-						<li>Для брони К2Р4 добавлена интеграция защиты от радиации и тд</li>
-					</ul>
-					<ul>Industrial Craft 2
-						<li>Увеличен радиус работы Crop Matron и Crop Harvester (25x3x25)</li>
-					</ul>
-					<ul>Kekztech
-						<li>Удален (перенесен в Impact Core)</li>
-					</ul>
-					<ul>Nuclear Control
-						<li>Исправлено множество визуальных багов</li>
-					</ul>
-					<ul>Practical Logistics
-						<li>Добавлен в сборку</li>
-						<li>Добавлена интеграция с GregTech</li>
-					</ul>
-					<ul>TecTech
-						<li>Изменены рецепты мультиамперных хэтчей</li>
-					</ul>
-					<ul>WAILAPlugins
-						<li>Добавлена интеграция с TecTech</li>
-					</ul>
-					<ul>Ztones
-						<li>Исправлен серверный баг с переключением блоков</li>
-					</ul>
-					<p class="p-black">CONFIGS:</p><hr>
-					<ul>
-						<li>Исправление высот жилы Касситерита</li>
-						<li>Отключена генерация жилы Касситерита на Луне</li>
-						<li>Исправлено отображение жилы Форсициума</li>
-					</ul>
-					<p class="p-black">SCRIPTS:</p><hr>
-					<ul>
-						<li>Удалены ненужные скрипты (продолжается перенос рецептов в код)</li>
-						<li>Удалены скрипты под WirelessCraftingTerminal, Ztones, ChickenChunks</li>
-						<li>Изменен рецепт большого фильтра из EnderIO</li>
-					</ul>
-				</div>
-			</div>			
-		</div>
-	</section>
-	<!-- end Changlog -->
     <!-- start banner Area -->
     <section class="banner-area relative">
       <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
           <div class="about-content col-lg-12">
             <h1 class="text-white">Modpack IMPACT</h1>
-            <p>Актуальная версия / Latest version: 1.0.0.0</p>
+            <p>Актуальная версия / Latest version: 1.0.0.1</p>
           </div>
         </div>
       </div>
@@ -227,11 +92,11 @@
 						<p style="color: #000; font-weight:bold;">Please read <a target="_blank" href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing">changelog</a> before download</p>
 						</div>
 					<div class="align-items-center justify-content-center text-center">
-					<a href="https://drive.google.com/uc?id=1BMQoi1hTUeHkgVIDmnhOKzGRpIgneXfn&export=download" class="primary-btn" data-text="CLIENT" target="_blank">
+					<a href="https://drive.google.com/uc?id=1shkjiEeSqqrzEqND7smpwz41alRR0mCD&export=download" class="primary-btn" data-text="CLIENT" target="_blank">
 						<span>CLIENT</span>
 					</a>
 					
-					<a href="https://drive.google.com/uc?id=1y0UORd2i7BRPx8TOZ63vY7t2A3QmBsQU&export=download" class="primary-btn" data-text="SERVER" target="_blank">
+					<a href="https://drive.google.com/uc?id=1hYIK2Qo51_RO4u9Mc8HcmeVgXwt5h5mi&export=download" class="primary-btn" data-text="SERVER" target="_blank">
 						<span>SERVER</span>
 					</a>
 					</div>
