fix от @RaitGamerGR

--- a/wiki/advpyrolyse.html
+++ b/wiki/advpyrolyse.html
@@ -157,7 +157,7 @@
 						<div id="content-left">
 							Для постройки этого мультиблока вам понадобятся 3 типа блоков: HSLA Machine Casing, Steel Pipe Casing и HSLA Frame Box.</br>
 							<hr>
-							Люки обслуживания (устанавливаются в любом месте вместо Solid Steel Machine Casing):
+							Люки обслуживания (устанавливаются в любом месте вместо HSLA Machine Casing):
 							<li>Energy Hatch: 1x</li>
 							<li>Maintenance Hatch: 1x</li>
 							<li>Muffler Hatch: 1x</li>
