--- a/wiki/primwaterpump.html
+++ b/wiki/primwaterpump.html
@@ -187,7 +187,7 @@
 						<div id="bg-left"></div>
 						<div id="bg-right"></div>
 						<div id="content-left">
-							Для постройки этого мультиблока вам понадобятся 2 типа блоков: Primitive Pump Deck и Wood Frame Box.</br>
+							Для постройки этого мультиблока вам понадобятся 2 типа блоков: Primitive Pump Deck и Wood Frame Box.<br>
 							<hr>
 							Output Hatch (устанавливается в красном квадрате на голограмме):
 							Остальные люки обслуживания не требуются.<br>
@@ -224,7 +224,7 @@
 				<div class="col-lg-12">
 					<p class="footer-text">
 						<p class="p-white">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname</p></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname</p>
 				</div>
 			</div>
 		</div>
