--- a/wiki/sawmill.html
+++ b/wiki/sawmill.html
@@ -184,7 +184,6 @@
 
 
 			</div>
-		</div>
 	</section>
 	<!-- End Service Area -->
 
@@ -195,7 +194,8 @@
 				<div class="col-lg-12">
 					<p class="footer-text">
 						<p class="p-white">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname</p></p>
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname
+						</p>
 				</div>
 			</div>
 		</div>
