--- a/wiki/waterdrill.html
+++ b/wiki/waterdrill.html
@@ -226,7 +226,8 @@
 				<div class="col-lg-12">
 					<p class="footer-text">
 						<p class="p-white">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname</p></p>
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname
+						</p>
 				</div>
 			</div>
 		</div>
