--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-4 col-md-6">
+				<div class="m-4 flex-grow-1">
 					<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.0s">
 						<div class="d-flex align-items-center mb-3">
 						<h4>AE2 Stuff</h4>
