--- a/download.html
+++ b/download.html
@@ -92,7 +92,7 @@
 						<p style="color: #000; font-weight:bold;">Please read <a target="_blank" href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing">changelog</a> before download</p>
 						</div>
 					<div class="align-items-center justify-content-center text-center">
-					<a href="https://drive.google.com/uc?id=1oM19F5IyCXlUiQOBwsI5Kczxo1vVoVQN&export=download" class="primary-btn" data-text="CLIENT" target="_blank">
+					<a href="css/main.css" class="primary-btn" data-text="CLIENT" target="_blank">
 						<span>CLIENT</span>
 					</a>
 					
