--- a/index.html
+++ b/index.html
@@ -1,143 +1,145 @@
 <!DOCTYPE html>
-<html lang="zxx" class="no-js">
+<html class="no-js" lang="zxx">
 
 <head>
-	<!-- Mobile Specific Meta -->
-	<meta
-	name="viewport"
-	content="user-scalable=no"
-  />
-	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
-	<meta name="author" content="colorlib">
-	<!-- Meta Description -->
-	<meta name="description" content="">
-	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
-	<!-- meta character set -->
-	<meta charset="UTF-8">
-	<!-- Site Title -->
-	<title>Impact - Главная</title>
+    <!-- Mobile Specific Meta -->
+    <meta
+            content="user-scalable=no"
+            name="viewport"
+    />
+    <!-- Favicon-->
+    <link href="img/fav.png" rel="shortcut icon">
+    <!-- Author Meta -->
+    <meta content="colorlib" name="author">
+    <!-- Meta Description -->
+    <meta content="" name="description">
+    <!-- Meta Keyword -->
+    <meta content="" name="keywords">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Impact - Главная</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/nice-select.css">
-	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700" rel="stylesheet">
+    <link href="css/flaticon.css" rel="stylesheet">
+    <link href="css/themify-icons.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/magnific-popup.css" rel="stylesheet">
+    <link href="css/nice-select.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/owl.carousel.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
 
-	
 </head>
 
 <body>
 
-	<!-- Start Preloader Area -->
-	<div class="preloader-area">
-		<div class="loader-box">
-			<div class="loader"></div>
-		</div>
-	</div>
-	<!-- End Preloader Area -->
+<!-- Start Preloader Area -->
+<div class="preloader-area">
+    <div class="loader-box">
+        <div class="loader"></div>
+    </div>
+</div>
+<!-- End Preloader Area -->
 
-	<!-- Start Header Area -->
-	<header id="header">
-		<div class="header-inner">
-		<div class="container main-menu">
-			<div class="row align-items-center d-flex">
-				<div id="logo">
-					<a href="index"><img src="img/logo.png" alt="" title="" /></a>
-				</div>
-				<nav id="nav-menu-container">
-					<ul class="nav-menu">
-						<li class=""><a class="active" href="index">Главная</a></li>
-						<li><a href="about">О модпаке</a></li>
-						<li><a href="download">Скачать</a></li>
-						<li class="menu-has-children"><a href="">Wiki</a>
-							<ul>
-								<li><a href="wiki/gt-addons">GregTech и аддоны</a></li>
-								<li><a data-tooltip="В разработке">Другие моды</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</div>
-	</header>
-		<section id="slider" class="slider" style="background: url('img/banner-img.png'); min-height: 90vh; background-size:cover;">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-7 col-sm-12 col-xs-12">
-						<div class="text">
-							<h1 class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".6s">IMPACT</h1>
-							<p>Индустриально-технологическая сборка Minecraft на версии 1.7.10 </br> с модифицированным Gregtech 5.09 и другими модами</p>
-							<div class="button">
-				
-								<a href="about" class="primary-btn-home" data-text="Подробнее">
-									<span>Подробнее</span>
-								</a>
-								<a href="download" class="primary-btn-home" data-text="Скачать">
-									<span>Скачать</span>
+<!-- Start Header Area -->
+<header id="header">
+    <div class="header-inner">
+        <div class="container main-menu">
+            <div class="row align-items-center d-flex">
+                <div id="logo">
+                    <a href="index"><img alt="" src="img/logo.png" title=""/></a>
+                </div>
+                <nav id="nav-menu-container">
+                    <ul class="nav-menu">
+                        <li class=""><a class="active" href="index">Главная</a></li>
+                        <li><a href="about">О модпаке</a></li>
+                        <li><a href="download">Скачать</a></li>
+                        <li class="menu-has-children"><a href="">Wiki</a>
+                            <ul>
+                                <li><a href="wiki/gt-addons">GregTech и аддоны</a></li>
+                                <li><a data-tooltip="В разработке">Другие моды</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="slider" id="slider"
+         style="background: url('img/banner-img.png'); min-height: 90vh; background-size:cover;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7 col-sm-12 col-xs-12">
+                <div class="text">
+                    <h1 class="wow fadeIn" data-wow-delay=".6s" data-wow-duration="1s">IMPACT</h1>
+                    <p>Индустриально-технологическая сборка Minecraft на версии 1.7.10 </br> с модифицированным Gregtech
+                        5.09 и другими модами</p>
+                    <div class="button">
 
-								</a>
-							</div>
-							<div class="social-icons">
-								<ul> 
-									<li><a href="https://discord.gg/bMf2qvd"><i class="ti-discord"></i>Discord</a></li>
-									<li><a href="https://github.com/GT-IMPACT"><i class="ti-github"></i>GitHub</a></li>
-									<li><a href=""><i class=""></i> </a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+                        <a class="primary-btn-home" data-text="Подробнее" href="about">
+                            <span>Подробнее</span>
+                        </a>
+                        <a class="primary-btn-home" data-text="Скачать" href="download">
+                            <span>Скачать</span>
 
-	<!-- End banner Area -->
-	<!-- start footer Area -->
-	<footer class="footer-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<p class="footer-text">
-						<p class="p-white">
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made by 4gname
-						</p>
-					</p>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- End footer Area -->
+                        </a>
+                    </div>
+                    <div class="social-icons">
+                        <ul>
+                            <li><a href="https://discord.gg/bMf2qvd"><i class="ti-discord"></i>Discord</a></li>
+                            <li><a href="https://github.com/GT-IMPACT"><i class="ti-github"></i>GitHub</a></li>
+                            <li><a href=""><i class=""></i> </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-	<!-- ####################### Start Scroll to Top Area ###################### -->
-	<div id="back-top">
-		<a title="Go to Top" href="#">
-			<i class="ti-angle-double-up"></i>
-		</a>
-	</div>
-	<!-- ####################### End Scroll to Top Area ####################### -->
+<!-- End banner Area -->
+<!-- start footer Area -->
+<footer class="footer-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="footer-text">
+                <p class="p-white">
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                    | Made by 4gname
+                </p>
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- End footer Area -->
 
-	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/easing.min.js"></script>
-	<script src="js/hoverIntent.js"></script>
-	<script src="js/superfish.min.js"></script>
-	<script src="js/mn-accordion.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/mail-script.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script src="js/main.js"></script>
+<!-- ####################### Start Scroll to Top Area ###################### -->
+<div id="back-top">
+    <a href="#" title="Go to Top">
+        <i class="ti-angle-double-up"></i>
+    </a>
+</div>
+<!-- ####################### End Scroll to Top Area ####################### -->
+
+<script src="js/vendor/jquery-2.2.4.min.js"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/easing.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.min.js"></script>
+<script src="js/mn-accordion.js"></script>
+<script src="js/jquery.ajaxchimp.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/isotope.pkgd.min.js"></script>
+<script src="js/mail-script.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
