--- a/download.html
+++ b/download.html
@@ -86,23 +86,17 @@
 						<h2 class="text-center"><p class="p-black">CLIENT | SERVER</p></h2>
 					</div>
 					<div class="text-center" class="mb-35 wow fadeIn" data-wow-duration=".8s" data-wow-delay=".3s">
-						<p>Скачать актуальную версию / Download latest version</p>
 						<div class="">
 						<p style="color: #000; font-weight:bold;">Перед скачиванием прочтите <a target="_blank" href="https://docs.google.com/document/d/1LebeDWaoNbqKscqCMzSA5WocuJ_RaUruF5jBYZPbKP0/edit?usp=sharing">список изменений</a></p>
 						<p style="color: #000; font-weight:bold;">Please read <a target="_blank" href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing">changelog</a> before download</p>
 						</div>
 					<div class="align-items-center justify-content-center text-center">
-					<a href="https://drive.google.com/uc?id=1oM19F5IyCXlUiQOBwsI5Kczxo1vVoVQN&export=download" class="primary-btn" data-text="CLIENT" target="_blank">
-						<span>CLIENT</span>
-					</a>
-					
-					<a href="https://drive.google.com/uc?id=1W8Krx5F-Pbc2VpxCzqaQ8oEuiJwvSR_-&export=download" class="primary-btn" data-text="SERVER" target="_blank">
-						<span>SERVER</span>
+					<a href="https://gtimpact.space/go/" class="primary-btn" data-text="DOWNLOAD" target="_blank">
+						<span>DOWNLOAD</span>
 					</a>
 					</div>
 					<div class="align-items-center justify-content-center text-center">
 					</br>
-						Предыдущие версии / Previous versions: <a href="https://drive.google.com/drive/folders/1ELUpwTLi2JbzshQvqE4p-sszpAhIBnDj?usp=sharing" target="_blank">click</a>
 					</br>
 						Ядро для сервера / Server core: <a href="https://drive.google.com/u/0/uc?export=download&confirm=VRK7&id=1YCrY9hgAmK3O0LmOvUR13lfpZCM9rk_j" target="_blank" data-tooltip="Неофициальная, но оптимизированая версия">Thermos</a> | 
 						 <a href="https://drive.google.com/u/0/uc?export=download&confirm=1ofC&id=1M49OrrRo219pejomX1MX5zSnxyRX6aH8" target="_blank" data-tooltip="Официальная версия">Ultramine</a> | 
