new path for download

--- a/download.html
+++ b/download.html
@@ -88,21 +88,25 @@
                 <div class="text-center" class="mb-35 wow fadeIn" data-wow-delay=".3s" data-wow-duration=".8s">
                     <p>Скачать актуальную версию / Download latest version</p>
                     <div class="">
-                        <p style="color: #000; font-weight:bold;">Перед скачиванием прочтите <a href="https://docs.google.com/document/d/1LebeDWaoNbqKscqCMzSA5WocuJ_RaUruF5jBYZPbKP0/edit?usp=sharing"
-                                                                                                target="_blank">список
+                        <p style="color: #000; font-weight:bold;">Перед скачиванием прочтите <a
+                                href="https://docs.google.com/document/d/1LebeDWaoNbqKscqCMzSA5WocuJ_RaUruF5jBYZPbKP0/edit?usp=sharing"
+                                target="_blank">список
                             изменений</a></p>
-                        <p style="color: #000; font-weight:bold;">Please read <a href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing"
-                                                                                 target="_blank">changelog</a>
+                        <p style="color: #000; font-weight:bold;">Please read <a
+                                href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing"
+                                target="_blank">changelog</a>
                             before download</p>
                     </div>
                     <div class="align-items-center justify-content-center text-center">
                         <a class="primary-btn"
-                           data-text="CLIENT" href="https://drive.google.com/uc?id=1oM19F5IyCXlUiQOBwsI5Kczxo1vVoVQN&export=download" target="_blank">
+                           data-text="CLIENT"
+                           href="https://gtimpact.space/go/releases/1.0.0.2/IMPACT-1.0.0.2-CLIENT.zip" target="_blank">
                             <span>CLIENT</span>
                         </a>
 
                         <a class="primary-btn"
-                           data-text="SERVER" href="https://drive.google.com/uc?id=1W8Krx5F-Pbc2VpxCzqaQ8oEuiJwvSR_-&export=download" target="_blank">
+                           data-text="SERVER"
+                           href="https://gtimpact.space/go/releases/1.0.0.2/IMPACT-1.0.0.2-SERVER.zip" target="_blank">
                             <span>SERVER</span>
                         </a>
                     </div>
@@ -112,15 +116,9 @@
                             href="https://drive.google.com/drive/folders/1ELUpwTLi2JbzshQvqE4p-sszpAhIBnDj?usp=sharing"
                             target="_blank">click</a>
                         </br>
-                        Ядро для сервера / Server core: <a
-                            data-tooltip="Неофициальная, но оптимизированая версия"
-                            href="https://drive.google.com/u/0/uc?export=download&confirm=VRK7&id=1YCrY9hgAmK3O0LmOvUR13lfpZCM9rk_j" target="_blank">Thermos</a> |
-                        <a data-tooltip="Официальная версия"
-                           href="https://drive.google.com/u/0/uc?export=download&confirm=1ofC&id=1M49OrrRo219pejomX1MX5zSnxyRX6aH8" target="_blank">Ultramine</a> |
-                        <a data-tooltip="Неофициальная, но оптимизированая версия командой ZonaSumraka.ru"
-                           href="https://drive.google.com/u/0/uc?export=download&confirm=RAIn&id=1rZGY0JroJDg71DmDoNbXnXnaAtbgE7vq"
-                           target="_blank">Ultramine
-                            (Patched)</a>
+                        Рекомендуемые ядра для сервера / Recommended cores for the server: <a
+                            href="https://gtimpact.space/go/server_cores/"
+                            target="_blank">click</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +143,7 @@
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
- 
+
     /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
@@ -155,6 +153,7 @@
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+
 
 </style>
 <!-- Start Service Area -->
