add wiki new parallel system

--- a/wiki/gt-addons.html
+++ b/wiki/gt-addons.html
@@ -238,7 +238,7 @@
                         </div>
                         <img alt="" class="img-fluid" height="150" src="../img/wiki/ParTower.png"
                              style="float: right; margin-top: -40px;" width="150">
-                        <p>Коммуникационная башня</p></br></br>
+                        <p>Коммуникационная Вышка</p></br></br>
                         <a class="primary-btn" data-text="Изучить" href="CommunicationTower">
                             <span>Изучить</span>
                         </a>
@@ -538,7 +538,6 @@
                         </a>
                     </div>
                 </div>
-
 
                 <!-- TODO -->
             </div>
