Fix some gramma mistakes

--- a/wiki/ParallelSuperComputer.html
+++ b/wiki/ParallelSuperComputer.html
@@ -83,14 +83,14 @@
                         Супер компьютер позволяет раздавать параллельность для машин Impact.
                         <p style="padding-top: 10px"></p>
                         Компьютер хранит параллельные поинты (Parallel Point, ПП), с возможностью
-                        их увеличения или расхода. Поинты нужны для раздачи параллельности машинам, каждая машина
+                        их увеличения или расхода. Поинты нужны для раздачи параллельности машинам, каждая из которых
                         ограничена по количеству параллельности: 4, 16, 64, 256.
                         <p style="padding-top: 10px"></p>
                         Что такое параллельность? Параллельность - способность одновременно
                         выполнять однотипные действия в несколько потоков.
                         <p style="padding-top: 10px"></p>
                         Если рассматривать параллельность в игре, то это выполнение одного типа
-                        рецепта несколько раз за одно время (при это затрата энергии пропорциональна
+                        рецепта несколько раз за одно время (при это затраты энергии пропорциональны
                         количеству выполняемых рецептов).
                     </div>
                     <div id="content-right">
@@ -118,13 +118,13 @@
                             </p>
                             <p style="padding-top: 10px">
                                 Для регулирования поинтов параллельности существует Компьютерная Стойка (Computer Rack).
-                                Компьютерная Стойка имеет 4 слота в которые помещаются Параллельные Процессоры (Parallel СPU).
+                                Компьютерная Стойка имеет 4 слота, в которые помещаются Параллельные Процессоры (Parallel СPU).
                                 Существует 4 тира процессоров, которые вырабатывают: 4, 16, 64, 256 ПП.
                             </p>
                             <p style="padding-top: 10px">
                                 Для передачи параллельности служат Параллельные Передатчики (Parallel Transmitter).
                                 Параллельные Передатчики существуют 4 тира, которые передают: 4, 16, 64, 256 ПП.
-                                При установки передатчика, в компьютере сразу будет зарезервировано нужное количество
+                                При установке передатчика, в компьютере сразу будет зарезервировано нужное количество
                                 ПП для работы передатчика.<br>
                             </p>
                             <p style="padding-top: 5px">
@@ -174,10 +174,10 @@
                         Остальные люки обслуживания не требуются.
                         <hr>
                         <p style="font-weight: bold; margin-bottom: 5px">Важно!</p>
-                        Структура компьютера может менятся (в длину), максимальная длина 16 блоков, минимальная - 2.
+                        Структура компьютера может меняться (в длину), максимальная длина 16 блоков, минимальная - 2.
 
                         <p style="padding-top: 5px">Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
-                            из мода TecTech, кликните им по контролеру мультиблока.</p>
+                            из мода TecTech, кликните им по контроллеру мультиблока.</p>
                     </div>
                     <div id="content-right">
                         <!-- todo casings -->
