--- a/wiki/ParallelSuperComputer.html
+++ b/wiki/ParallelSuperComputer.html
@@ -90,7 +90,7 @@
                         выполнять однотипные действия в несколько потоков.
                         <p style="padding-top: 10px"></p>
                         Если рассматривать параллельность в игре, то это выполнение одного типа
-                        рецепта несколько раз за одно время (при это затраты энергии пропорциональны
+                        рецепта несколько раз за одно время (при этом затраты энергии пропорциональны
                         количеству выполняемых рецептов).
                     </div>
                     <div id="content-right">
